Added a ton on new screens for Tools and Materials